# voca

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  SECURITY.md  bun.lockb  bunfig.toml  docker-compose.prod.yml  mise.toml  package-lock.json  package.json
.agent/rules/: agent-rules.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  test.yml
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/src/: app.css  app.html
apps/web/src/lib/: PackageManagerSwitcher.svelte  SoundSettings.svelte  sounds.ts  theme.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/[room]/: +page.svelte
apps/web/src/routes/admin/: +page.svelte
apps/web/src/routes/docs/: +layout.svelte  +page.svelte
apps/web/src/routes/docs/api/: +page.svelte
apps/web/src/routes/docs/architecture/: +page.svelte
apps/web/src/routes/docs/getting-started/: +page.svelte
apps/web/src/routes/docs/self-hosting/: +page.svelte
services/signaling/: Cargo.toml  Dockerfile
services/signaling/src/: handlers.rs  main.rs  state.rs  types.rs
