[package]
name = "signaling"
version = "0.3.0"
authors = ["Trey Orr"]
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
futures = "0.3"
tower = "0.5"
tower_governor = "0.8"

